--- a/app/views/controls/top.html
+++ b/app/views/controls/top.html
@@ -37,7 +37,7 @@
         </div>
       </form>
       <div ng-if="!subdomain && fireteam[0].name && $index < 3 && $index > 0" ng-repeat="player in fireteam track by $index">
-        <form role="form" ng-submit="searchPlayerbyName(player, teammateName, platformValue, $index)">
+        <form role="form" ng-submit="searchPlayerbyName(teammateName, platformValue, $index)">
           <div class="main-search__row">
             <div class="main-search__input">
               <input type="text" class="form-control" placeholder="{{fireteam[$index].name || 'Enter their teammates\' gamertag'}}"
