Styled recent players dropdown

--- a/app/styles/inc/_colors.scss
+++ b/app/styles/inc/_colors.scss
@@ -4,6 +4,7 @@ $playstation-main: #0066C2;
 $trials-gold: #FFD700;
 $success: #00C853;
 $fail: #D50000;
+$info: #03A9F4;
 
 $text-on-dark: #999;
 $controls-btn-color: darken(white, 30%);
