--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -18,6 +18,7 @@
 @import 'elements/match';
 @import 'elements/modal';
 @import 'elements/carousel';
+@import 'elements/dropdown-menu';
 
 // Main parts
 @import 'parts/controls';
