--- a/app/views/modals/faq.html
+++ b/app/views/modals/faq.html
@@ -18,6 +18,6 @@
   </div>
   <div class="faq-modal__container">
     <p class="faq-modal__question">This is so awesome that I'm throwing money at my screen. Is there something wrong?</p>
-    <p class="faq-modal__answer">Probably not. But nstead of throwing money at your screen you can support us by <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=A3T6F2QDXUTCN" target="_blank">donating through Paypal</a>!</p>
+    <p class="faq-modal__answer">Probably not. But instead of throwing money at your screen you can support us by <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=A3T6F2QDXUTCN" target="_blank">donating through Paypal</a>!</p>
   </div>
 </div>
