fix broken last-matches weapon icons

--- a/app/views/player/last-matches.html
+++ b/app/views/player/last-matches.html
@@ -56,7 +56,7 @@
       <div class="last-match-weapon col-xs-12" ng-repeat="weapon in player.weaponsUsed track by $index">
         <div class="row">
           <div class="col-xs-6 last-weapon-weapon__descr">
-            <img class="last-match-weapon__img img-responsive" ng-src="{{'https://www.bungie.net' + getWeaponByHash(weapon.referenceId).icon}}" alt="{{getWeaponByHash(weapon.referenceId).name}}">
+            <img class="last-match-weapon__img img-responsive" ng-src="{{getWeaponByHash(weapon.referenceId).icon}}" alt="{{getWeaponByHash(weapon.referenceId).name}}">
             <span class="last-match-weapon__title" ng-bind="getWeaponByHash(weapon.referenceId).name"></span>
           </div>
           <div class="col-xs-2 stat">
