--- a/app/views/player/index.html
+++ b/app/views/player/index.html
@@ -6,7 +6,7 @@
     <tab class="player-tab--equipped" heading="Equipped" analytics-on analytics-event="Click" analytics-category="Equipped">
       <div ng-include="'views/player/equipped.html'"></div>
     </tab>
-    <tab class="player-tab--last-matches" heading="Last Matches" analytics-on analytics-event="Click" analytics-category="Last Matches">
+    <tab class="player-tab--last-matches" heading="Last Matches" analytics-on analytics-event="Click" analytics-category="Last Matches" ng-click="getLastMatch(player)">
       <div ng-include="'views/player/last-matches.html'"></div>
     </tab>
     <tab class="player-tab--stats" heading="Stats" analytics-on analytics-event="Click" analytics-category="Stats">
@@ -29,6 +29,11 @@
   <div class="player__links">
     <div class="row">
       <div class="col-xs-12 player__links__btns">
+        <a href="https://guardian.gg/en/profile/{{player.membershipType}}/{{player.name}}"
+           type="button" target="_blank" class="btn btn-default"
+           analytics-on analytics-event="Click" analytics-category="Guardian.gg">
+          Guardian.gg
+        </a>
         <a href="http://my.destinytrialsreport.com/{{player.membershipType === 2 ? 'ps' : 'xbox'}}/{{player.name}}"
            type="button" target="_blank" class="btn btn-default" ng-if="!subdomain"
            analytics-on analytics-event="Click" analytics-category="myDestinyTrialsReport">
@@ -38,11 +43,6 @@
            type="button" target="_blank" class="btn btn-default" ng-if="subdomain"
            analytics-on analytics-event="Click" analytics-category="DestinyTrialsReport">
           DestinyTrialsReport
-        </a>
-        <a href="http://destinytracker.com/destiny/playlists/{{player.membershipType === 2 ? 'ps' : 'xbox'}}/{{player.name}}/trialsOfOsiris"
-           type="button" target="_blank" class="btn btn-default"
-           analytics-on analytics-event="Click" analytics-category="DestinyTracker">
-          DestinyTracker
         </a>
       </div>
     </div>
