--- a/app/views/player/last-matches.html
+++ b/app/views/player/last-matches.html
@@ -1,4 +1,7 @@
-<div class="player-tab--last-matches">
+<div class="player-tab--last-matches" ng-class="{'blur': !player.recentMatches}">
+  <svg class="spinner" width="65px" height="65px" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" ng-class="{'hide': player.recentMatches}">
+    <circle class="path" fill="none" stroke-width="6" stroke-linecap="round" cx="33" cy="33" r="30"></circle>
+  </svg>
   <div class="player-tab__section">
     <div class="row">
       <div class="last-match__result col-xs-4" ng-repeat="match in player.recentMatches">
