finish up some refactoring and add elo tooltip

--- a/app/views/controls/bottom.html
+++ b/app/views/controls/bottom.html
@@ -2,6 +2,7 @@
   <a type="button" class="btn btn-default" ng-if="!subdomain" href="http://my.destinytrialsreport.com" target="_self"><span class="highlight">my</span>Report</a>
   <a type="button" class="btn btn-default" ng-if="subdomain" href="http://www.destinytrialsreport.com" target="_self"><span class="highlight">trials</span>Report</a>
   <button type="button" class="btn btn-default" ng-mobile-click="showFAQ()"><span class="highlight">FAQ</span></button>
+  <a type="button" class="btn btn-default" href="https://guardian.gg" target="_self">Guardian<span class="highlight">.gg</span></a>
 </div>
 
 <div class="donate">
