fix subdomain searching

--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -1,26 +1,26 @@
 <article class="blog-post shadow-z-1">
   <div class="blog-post__img" ng-style="{'background-image':'url(' + currentMap.pgcrImage + ')'}"></div>
   <div class="blog-post__title">
-    <h2>Trials Starts on October 30!</h2>
+    <h2>Partnership with Guardian.gg!</h2>
   </div>
   <ul class="blog-post__meta">
     <li>
-      <p><span class="material-icons">&#xE8DF;</span> October 24st, 2015</p>
+      <p><span class="material-icons">&#xE8DF;</span> November 6th, 2015</p>
     </li>
   </ul>
   <div class="blog-post__content">
     <p>
-      The much awaited return of Trials of Osiris has been announced. In their most recent Weekly Update Bungie confirmed that Trials of Osiris
-      returns on the weekend of 10/30.<br/>
+      We have recently made some friends over at <a href="https://Guardian.gg" target="_top">Guardian.gg</a>,
+      they love to collect all kinds of data and agreed to let us use anything we want to make our site more useful for you.<br/>
+      All they want in exchange is for you to <a href="https://Guardian.gg" target="_top">visit</a> and let them
+      know what kind of data and content you would like to see more of.<br/>
     </p>
     <p>
-      Ready your arms against your opponents guardians. You must be ruthless, they will not relent. Your competitive companion,
-      Destiny Trials Report, is readily at your side as you battle for the lighthouse.<br/>
+      Right now nothing much has changed, we have replaced the Bungie rating with a custom
+      <a href="https://guardian.gg/en/faq" target="_top">Elo rating</a> that is calculated in-house by Guardian.gg<br/>
     </p>
     <p>
-      We've redesigned the entire app to show you more of the stats you need in clearer ways.
-      That's not all, Guardians. We've gone ahead and outfitted the app with the new Cathedral of Dusk crucible map that has yet
-      to be released. We expect this map will make its debut for the return of Trials!
+      We are planning some big updates coming up so stay tuned and good luck this week Guardians!
       <br/>
     </p>
     <p>
