--- a/app/styles/elements/_stats.scss
+++ b/app/styles/elements/_stats.scss
@@ -1,13 +1,14 @@
 .stat {
   white-space: nowrap;
 
-  span i {
+  span {
     font-size: 1.2em;
     line-height: 1;
-  }
 
-  i {
-    vertical-align: text-bottom;
+    i {
+      font-size: 1.2em;
+      vertical-align: text-bottom;
+    }
   }
 
   label {
