fix a few typos

--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -66,7 +66,7 @@
   </div>
   <div class="row">
     <div class="blog-weapon__show-more">
-      <span class="pull-right"><a href="https://guardian.gg/en/weapon-stats?platform={{$scope.platformNumeric}}&start={{dateBeginTrials}}&mode=14" target="_top">Show More</a></span>
+      <span class="pull-right"><a ng-href="https://guardian.gg/en/weapon-stats?platform={{platformNumeric}}&start={{dateBeginTrials}}&mode=14" target="_blank">Show More</a></span>
     </div>
   </div>
 </article>
