hide weapon stats on xs for now

--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -35,7 +35,8 @@
   </div>
 </article>
 
-<article class="blog-post blog-ggg__weapons shadow-z-1">
+<!-- temporarily hidden on xs until UI bugs are resolved -->
+<article class="blog-post blog-ggg__weapons shadow-z-1 hidden-xs">
   <div class="blog-weapon__header">
     <div class="blog-weapon__title">
       <h4>Top <span class="highlight">Weapons</span> This Week</h4>
