uncomment a few more filters

--- a/app/styles/parts/_colofon.scss
+++ b/app/styles/parts/_colofon.scss
@@ -44,7 +44,7 @@
     &:focus {
       text-decoration: none;
       color: white;
-      //filter: brightness(2);
+      filter: brightness(2);
     }
   }
 }
