--- a/app/styles/parts/_donate.scss
+++ b/app/styles/parts/_donate.scss
@@ -19,7 +19,7 @@
         color: white;
 
         img {
-          //filter: brightness(2);
+          filter: brightness(2);
         }
       }
     }
