--- a/app/views/controls/bottom.html
+++ b/app/views/controls/bottom.html
@@ -1,15 +1,20 @@
 <div class="domain-switch">
-  <a type="button" class="btn btn-default" ng-if="!subdomain" href="http://my.destinytrialsreport.com" target="_self">
-    <span class="highlight">my</span>Report
-  </a>
-  <a type="button" class="btn btn-default" ng-if="subdomain" href="http://www.destinytrialsreport.com" target="_self">
-    <span class="highlight">trials</span>Report
-  </a>
-  <a type="button" class="btn btn-default" href="https://guardian.gg" target="_self"
-     analytics-on analytics-event="Click" analytics-category="GGG Controls">
-    Guardian<span class="highlight">.gg</span>
-  </a>
-  <button type="button" class="btn btn-default" ng-mobile-click="showFAQ()"><span class="highlight">FAQ</span></button>
+  <div class="btn-group-justified">
+    <a type="button" class="btn btn-default" ng-if="!subdomain" href="http://my.destinytrialsreport.com" target="_self">
+      <span class="highlight">my</span>Report
+    </a>
+    <a type="button" class="btn btn-default" ng-if="subdomain" href="http://www.destinytrialsreport.com" target="_self">
+      <span class="highlight">trials</span>Report
+    </a>
+    <a type="button" class="btn btn-default" href="https://guardian.gg" target="_blank"
+       analytics-on analytics-event="Click" analytics-category="GGG Controls">
+      Guardian<span class="highlight">.gg</span>
+    </a>
+    <a type="button" class="btn btn-default" ng-mobile-click="showFAQ()"
+       analytics-on analytics-event="Click" analytics-category="FAQ">
+      <span class="highlight">FAQ</span>
+    </a>
+  </div>
 </div>
 
 <div class="donate">
