--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -37,7 +37,7 @@
 
 <!-- temporarily hidden on xs until UI bugs are resolved -->
 <article class="blog-post blog-ggg__weapons shadow-z-1 hidden-xs">
-  <div class="blog-weapon__header">
+  <div class="blog-weapon__header blog-post__img">
     <div class="blog-weapon__title">
       <h4>Top <span class="highlight">Weapons</span> This Week</h4>
     </div>
