only show top weapons if data is available

--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -36,7 +36,7 @@
 </article>
 
 <!-- temporarily hidden on xs until UI bugs are resolved -->
-<article class="blog-post blog-ggg__weapons shadow-z-1 hidden-xs">
+<article class="blog-post blog-ggg__weapons shadow-z-1 hidden-xs" ng-show="gggWeapons">
   <div class="blog-weapon__header blog-post__img">
     <div class="blog-weapon__title">
       <h4>Top <span class="highlight">Weapons</span> This Week</h4>
