add lighter ggg logo

--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -45,7 +45,7 @@
       <span class="highlight">Powered by</span>
       <a href="https://guardian.gg" target="_blank"
          analytics-on analytics-event="Click" analytics-category="GGG Powered By">
-        <img src="https://guardian.gg/asset/image/logo.png">
+        <img src="/images/ggg-logo.png">
       </a>
     </div>
   </div>
