--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -36,10 +36,13 @@
 </article>
 
 <!-- temporarily hidden on xs until UI bugs are resolved -->
-<article class="blog-post blog-ggg__weapons shadow-z-1 hidden-xs" ng-show="gggWeapons">
+<article class="blog-post blog-ggg__weapons shadow-z-1 hidden-xs" ng-show="gggWeapons[platformNumeric]">
   <div class="blog-weapon__header blog-post__img">
     <div class="blog-weapon__title">
-      <h4>Top <span class="highlight">Weapons</span> This Week</h4>
+      <h4>
+        <label class="platform-toggle__name"><img ng-src="{{platformValue ? 'images/ps.svg' : 'images/xbox.svg'}}"></label>
+        Top <span class="highlight">Weapons</span> This Week
+      </h4>
     </div>
     <div class="blog-weapon__logo">
       <span class="highlight">Powered by</span>
@@ -50,8 +53,12 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-xs-12 col-sm-4" ng-repeat="type in [gggWeapons.primary, gggWeapons.special, gggWeapons.heavy] track by $index">
+    <div class="col-xs-12 col-sm-4"
+         ng-repeat="type in [gggWeapons[platformNumeric].primary,
+                             gggWeapons[platformNumeric].special,
+                             gggWeapons[platformNumeric].heavy] track by $index">
       <div class="row">
+        <p ng-bind="getWeaponTypeByIndex($index)"></p>
         <div class="row" ng-repeat="weapon in type track by $index" ng-if="$index < 3">
           <div class="col-xs-6 last-weapon-weapon__descr">
             <img class="last-match-weapon__img img-responsive" ng-src="{{'https://bungie.net/' + weapon.icon}}" alt="{{weapon.name}}">
