fix last matches tab on myreport

--- a/app/views/player/index.html
+++ b/app/views/player/index.html
@@ -21,7 +21,7 @@
     <uib-tab class="player-tab--maps" heading="Maps" analytics-on analytics-event="Click" analytics-category="Maps">
       <div ng-include="'views/player/maps.html'"></div>
     </uib-tab>
-    <uib-tab class="player-tab--last-matches" heading="Last Matches" analytics-on analytics-event="Click" analytics-category="Last Matches">
+    <uib-tab class="player-tab--last-matches" heading="Last Matches" analytics-on analytics-event="Click" analytics-category="Last Matches" ng-click="getLastMatch(player)">
       <div ng-include="'views/player/last-matches.html'"></div>
     </uib-tab>
   </uib-tabset>
