clean up modals

--- a/app/views/controls/bottom.html
+++ b/app/views/controls/bottom.html
@@ -10,7 +10,8 @@
        analytics-on analytics-event="Click" analytics-category="GGG Controls">
       Guardian<span class="highlight">.gg</span>
     </a>
-    <a type="button" class="btn btn-default" ng-mobile-click="showFAQ()"
+    <a type="button" class="btn btn-default"
+       title="FAQ" data-content-template="views/modals/faq.html" bs-modal
        analytics-on analytics-event="Click" analytics-category="FAQ">
       <span class="highlight">FAQ</span>
     </a>
