--- a/app/views/modals/map.html
+++ b/app/views/modals/map.html
@@ -1,12 +1,12 @@
 <div class="modal" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
-    <img class="img-responsive" ng-src="{{currentMap.heatmapImage}}" alt="Heatmap">
+    <img class="img-responsive" ng-src="{{currentMap.mapImage}}" alt="Map">
   </div>
 </div>
 
 <!--<div class="map-modal">
   <div class="map-modal__heatmap">
-    <img class="img-responsive" ng-src="{{currentMap.heatmapImage}}" alt="Heatmap">
+    <img class="img-responsive" ng-src="{{currentMap.mapImage}}" alt="Map">
   </div>
 </div>-->
 
