Small tweaks to GGG elements

--- a/app/views/player/index.html
+++ b/app/views/player/index.html
@@ -32,7 +32,7 @@
         <a href="https://guardian.gg/en/profile/{{player.membershipType}}/{{player.name}}"
            type="button" target="_blank" class="btn btn-default"
            analytics-on analytics-event="Click" analytics-category="Guardian.gg">
-          Guardian.gg
+          <img src="images/ggg-logo.png" alt="Guardian.gg">
         </a>
         <a href="http://my.destinytrialsreport.com/{{player.membershipType === 2 ? 'ps' : 'xbox'}}/{{player.name}}"
            type="button" target="_blank" class="btn btn-default" ng-if="!subdomain"
