--- a/app/views/player/overview.html
+++ b/app/views/player/overview.html
@@ -85,7 +85,7 @@
         <span>
           <a href="https://guardian.gg/en/faq" target="_blank"
              bs-popover="{content:'Elo is an account-wide rating system provided by Guardian.gg'}">
-            <i class="material-icons">&#xE887;</i>
+            <i class="material-icons icon--small">&#xE8FD;</i>
           </a>
         </span>
         <label>Elo Rating</label>
