--- a/app/styles/inc/_icons.scss
+++ b/app/styles/inc/_icons.scss
@@ -11,3 +11,8 @@
   -webkit-font-feature-settings: 'liga';
   -webkit-font-smoothing: antialiased;
 }
+
+.icon--small {
+  vertical-align: -13%;
+  font-size: .9em;
+}
