--- a/app/styles/parts/_player.scss
+++ b/app/styles/parts/_player.scss
@@ -170,6 +170,10 @@
 .player__links__btns.player__links__btns.player__links__btns {
   display: flex;
 
+  img {
+    max-height: 1.3em;
+  }
+
   a {
     font-size: .9em;
     color: #999;
