--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -19,6 +19,7 @@
 @import 'elements/modal';
 @import 'elements/carousel';
 @import 'elements/dropdown-menu';
+@import 'elements/block';
 
 // Main parts
 @import 'parts/controls';
@@ -30,6 +31,8 @@
 @import 'parts/platform-toggle';
 @import 'parts/donate';
 @import 'parts/colofon';
+@import 'parts/home';
+@import 'parts/top-weapons';
 
 // Player card
 @import 'parts/player';
