--- a/app/views/main.html
+++ b/app/views/main.html
@@ -13,8 +13,7 @@
         </div>
       </div>
     </div>
-    <div class="blog" ng-show="!fireteam[0] && !status">
-      <div ng-include="'views/blog/index.html'"></div>
+    <div class="home" ng-show="!fireteam[0] && !status" ng-include="'views/home/index.html'">
     </div>
     <div class="players-wrapper" ng-if="fireteam[0] && !status" ng-class="{'focus-on-player-one':focusOnPlayer===1, 'focus-on-player-two':focusOnPlayer===2, 'focus-on-player-three':focusOnPlayer===3}">
       <div class="player-shift-focus player-shift-focus--left" ng-mobile-click="shiftPlayerFocus(-1)"></div>
