--- a/app/styles/parts/_blog-post.scss
+++ b/app/styles/parts/_blog-post.scss
@@ -1,32 +1,7 @@
-.blog {
-  align-self: center;
-  margin: 0 auto;
-  padding: 1em;
-}
 
 .blog-post {
-  max-width: 1000px;
-  margin: auto;
-  margin-bottom: 4em;
-  background: #fff;
-  padding: 2em;
-  border-radius: 2em;
-}
-
-.blog-ggg__weapons {
-  margin-bottom: auto;
-  padding-bottom: 1em;
-  .stat {
-    span {
-      font-size: 1em;
-      font-weight: 400;
-    }
-  }
-}
-
-.blog-weapon__show-more {
-  margin-top: 11px;
-  margin-right: 1em;
+  display: flex;
+  flex-direction: column;
 }
 
 .blog-post__img {
@@ -34,56 +9,14 @@
   margin-top: -2em;
   margin-right: -2em;
   margin-bottom: 1.5em;
-  border-top-left-radius: 2em;
-  border-top-right-radius: 2em;
   background-position: center;
   background-size: cover;
   height: 200px;
+  flex-grow: 1;
 }
 
-.blog-weapon__header {
-  height: 50px;
-  background-color: #333;
-  color: #fff;
-
-  .blog-weapon__title {
-    width: 40%;
-    float: left;
-    h4 {
-      line-height: 2em;
-      margin-left: 1em;
-    }
-  }
-
-  .blog-weapon__logo {
-    width: 30%;
-    float: right;
-    height: 100%;
-    img {
-      vertical-align: text-bottom;
-      height: 30px;
-      margin-left: 11px;
-      margin-top: 11px;
-    }
-  }
-}
-
-@media (max-width: 970px) {
-  .blog-weapon__header {
-    .blog-weapon__logo {
-      width: 50%;
-      img {
-        width: 70px;
-        height: auto;
-        margin-top: 25px;
-      }
-    }
-  }
-  .blog-weapon__show-more {
-    span {
-      float: left!important;
-    }
-  }
+.blog-post__content {
+  flex-shrink: 0;
 }
 
 .blog-post__meta {
@@ -123,6 +56,6 @@
   }
 }
 
-.blog-post__content {
+.blog-post__text {
   margin-top: 2em;
 }
