move images and fix conflicts

--- a/app/components/home/blog.partial.html
+++ b/app/components/home/blog.partial.html
@@ -87,7 +87,7 @@
         <label>Powered by</label><br>
         <a href="https://guardian.gg" target="_blank"
            analytics-on analytics-event="Click" analytics-category="GGG Powered By">
-          <img src="/images/ggg-logo.png">
+          <img src="/assets/img/ggg-logo.png">
         </a>
       </div>
       <div class="block__link">
