Move API functionality inside main application

--- a/app/components/controls/bottom.partial.html
+++ b/app/components/controls/bottom.partial.html
@@ -11,7 +11,7 @@
       Guardian<span class="highlight">.gg</span>
     </a>
     <a type="button" class="btn btn-default"
-       title="FAQ" data-content-template="views/modals/faq.html" bs-modal
+       title="FAQ" data-content-template="shared/modals/faq.modal.html" bs-modal
        analytics-on analytics-event="Click" analytics-category="FAQ">
       <span class="highlight">FAQ</span>
     </a>
