--- a/app/components/home/blog.partial.html
+++ b/app/components/home/blog.partial.html
@@ -47,7 +47,7 @@
     <article class="block top-weapons shadow-z-1">
       <div class="block__title">
         <figure>
-          <img ng-src="{{platformValue ? 'images/ps.svg' : 'images/xbox.svg'}}">
+          <img ng-src="{{platformValue ? 'assets/img/ps.svg' : 'assets/img/xbox.svg'}}">
         </figure>
         <h2>
           <span class="highlight">Top weapons</span> this week
