fix last matches spinner

--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -70,7 +70,7 @@ $duration: 1.4s;
 }
 
 .spinner {
-  position: absolute;
+  position: relative;
   left: 40%;
   top: 60%;
   animation: rotator $duration linear infinite;
