--- a/app/components/player/overview.partial.html
+++ b/app/components/player/overview.partial.html
@@ -55,10 +55,10 @@
         <label>Streak</label>
       </div>
       <div class="col-xs-3 stat">
-        <span ng-bind="player.ggg.elo || 'N/A'" data-template-url="shared/popovers/gggElo.popover.html" bs-popover="{content:player.ggg}"></span>
+        <span ng-bind="player.ggg.elo || 'N/A'" data-template-url="shared/popovers/gggElo.popover.html" bs-popover></span>
         <span>
           <a href="https://guardian.gg/en/faq" target="_blank"
-             bs-popover="{content:'Elo is an account-wide rating system provided by Guardian.gg'}">
+             data-content="Elo is an account-wide rating system provided by Guardian.gg" bs-popover>
             <i class="material-icons icon--small">&#xE8FD;</i>
           </a>
         </span>
