--- a/app/components/inventory/armor.template.html
+++ b/app/components/inventory/armor.template.html
@@ -11,7 +11,7 @@
       </div>
       <div class="weapon__perks">
         <div class="weapon-perk" ng-repeat="node in exoticArmor.nodes track by $index"
-             bs-popover="{title:node.name,content:node.description}">
+             title="{{node.name}}" data-content="{{node.description}}" bs-popover>
           <i class="weapon-perk__icon">
             <img class="img-responsive" ng-src="{{node.icon}}" alt="{{node.name}}">
           </i>
@@ -21,7 +21,7 @@
         <span class="player-hazard player-hazard--none">No Exotic armor equipped</span>
       </div>
       <div class="weapon__hazards">
-        <span class="player-hazard" ng-repeat="hazard in exoticArmor.hazards">{{hazard}}</span>
+        <span class="player-hazard" ng-repeat="hazard in exoticArmor.hazards" ng-bind="hazard"></span>
       </div>
     </div>
   </div>
