--- a/app/components/inventory/weapons.template.html
+++ b/app/components/inventory/weapons.template.html
@@ -11,15 +11,15 @@
         <span class="weapon__damage" ng-if="weapon.damage" ng-bind="weapon.damage + ' atk'"></span>
       </div>
       <div class="weapon__perks">
-        <div class="weapon-perk"
-             ng-repeat="node in weapon.nodes track by $index" bs-popover="{title:node.name,content:node.description}">
+        <div class="weapon-perk" ng-repeat="node in weapon.nodes track by $index"
+             title="{{node.name}}" data-content="{{node.description}}" bs-popover>
           <i class="weapon-perk__icon">
             <img class="img-responsive" ng-src="{{node.icon}}" alt="{{node.name}}">
           </i>
         </div>
       </div>
       <div class="weapon__hazards">
-        <span class="player-hazard" ng-repeat="hazard in weapon.hazards">{{hazard}}</span>
+        <span class="player-hazard" ng-repeat="hazard in weapon.hazards" ng-bind="hazard"></span>
       </div>
     </div>
   </div>
