--- a/app/components/inventory/weapons.template.html
+++ b/app/components/inventory/weapons.template.html
@@ -9,6 +9,7 @@
       <div class="weapon__title">
         <span ng-bind="weapon.definition.name"></span>
         <span class="weapon__damage" ng-if="weapon.damage" ng-bind="weapon.damage + ' atk'"></span>
+        <span class="weapon__damage" ng-if="topWeapons && topWeapons[weapon.definition.itemHash]" ng-bind="'acc ' + topWeapons[weapon.definition.itemHash].percision + '%'"></span>
       </div>
       <div class="weapon__perks">
         <div class="weapon-perk" ng-repeat="node in weapon.nodes track by $index"
